<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/providerImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/provider_image" />

    <TextView
        android:id="@+id/providerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/providerImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/provider_name" />

    <RatingBar
        android:id="@+id/providerRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.1" />

    <Button
        android:id="@+id/button_write_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/providerRatingBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/write_review" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_write_review"
        android:layout_marginTop="16dp"
        android:clipToPadding="false" />

</LinearLayout>
